objects/Parent_Child_Resource__c/Parent_Child_Resource__c.object-meta.xml
<CustomObject>
    <label>Parent Child Resource (Import)</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parent Child Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>