objects/Parent_Child_Resource__c/fields/Child_1_Resource__c.field-meta.xml
<CustomField>
    <fullName>Child_1_Resource__c</fullName>
    <label>Child 1 Resource</label>
    <length>20</length>
    <type>Text</type>
</CustomField>