objects/Parent_Child_Resource__c/fields/Child_2_UOM__c.field-meta.xml
<CustomField>
    <fullName>Child_2_UOM__c</fullName>
    <label>Child 2 UOM</label>
    <length>20</length>
    <type>Text</type>
</CustomField>