objects/Parent_Child_Resource__c/fields/Child_3_Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Child_3_Resource_Type__c</fullName>
    <label>Child 3 Resource Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>