objects/Parent_Child_Resource__c/fields/Child_3_UOM__c.field-meta.xml
<CustomField>
    <fullName>Child_3_UOM__c</fullName>
    <label>Child 3 UOM</label>
    <length>20</length>
    <type>Text</type>
</CustomField>