objects/Parent_Child_Resource__c/fields/Parent_Resource__c.field-meta.xml
<CustomField>
    <fullName>Parent_Resource__c</fullName>
    <label>Parent Resource</label>
    <length>20</length>
    <type>Text</type>
</CustomField>