objects/Parent_Child_Resource__c/fields/Parent_Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Resource_Type__c</fullName>
    <label>Parent Resource Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>